# Admin_ACts_Linux_IA

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh
data/: admin-acts-linux.desktop
packaging/appimage/AppDir/: AppRun  admin-acts-linux.desktop
packaging/debian/: changelog  control  postinst
src/: AuthDialog.cpp  AuthDialog.h  InstallTab.cpp  InstallTab.h  MainWindow.cpp  MainWindow.h  PackageManager.cpp  PackageManager.h  SettingsTab.cpp  SettingsTab.h  UpdatesTab.cpp  UpdatesTab.h  main.cpp
